[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scripts/environment/location_trigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 48, 36 )

[node name="LocationTrigger" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 22 )

[connection signal="body_entered" from="." to="." method="_on_LocationTrigger_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LocationTrigger_body_exited"]
